--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "flowbite": "^2.3.0",
     "flowbite-vue": "^0.1.5",
+    "pinia": "^2.1.7",
     "swiper": "^11.1.4",
     "vue": "^3.4.21",
     "vue-router": "^4.3.3"
